correção bug na pagina de compra de produtos - modo pesquisa estava sem overflow no eixo y

--- a/src/app/buyers/pages/buy-products-at-market-page/buy-products-at-market-page.component.scss
+++ b/src/app/buyers/pages/buy-products-at-market-page/buy-products-at-market-page.component.scss
@@ -78,6 +78,7 @@ button.fab-btn{
   margin-top: 56px;
   margin-bottom: 0px;
   z-index: 10;
+  overflow: scroll;
 }
 
 .fill-body-height{
